# oneAPI-pybind11-template

./: CMakeLists.txt  Dockerfile  README.md  bindings.cpp  matrix_mult.cpp  matrix_mult.h  test_matmul.py
